@@ -9,6 +9,7 @@ Improve TooManyMethods rule - thanks to a patch from Riku Nykanen
 Improve DoNotCallSystemExit - thanks to a patch from Steven Christou
 Fix false negative for UseArraysAsList when the array was passed as method parameter - thanks to Andy Throgmorton
 Enhanced SuspiciousEqualsMethodName rule - thanks to Andy Throgmorton
+Add a script to launch CPDGUI on Unix system - thanks to Tom Wheeler
 
 New Rule:
 	Basic ruleset: DontCallThreadRun - thanks to Andy Throgmorton
